--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.3",
     "@mui/material": "^6.1.3",
     "@react-spring/web": "^9.7.5",
     "axios": "^1.7.7",
