--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "express": "^4.21.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
     "react-toastify": "^10.0.6"
   },
   "devDependencies": {
