--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.6"
   },
   "devDependencies": {
